--- a/Opcodes/fluidOpcodes/fluidOpcodes.html
+++ b/Opcodes/fluidOpcodes/fluidOpcodes.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>buzz</title>
+<title>fluidOpcodes</title>
 
 </head>
 <body class="REFENTRY" alink="#0000ff" bgcolor="#ffffff" link="#0000ff" text="#000000" vlink="#840084">
